@@ -568,4 +568,6 @@ Improved the layout of the Disk Usage page, using tabs.
 Added the --template option to modify-domain.pl.
 Added a column to the list of installed scripts to show if it is the latest version or not.
 Added a star rating system (out of 5) for script installers. Users can rate installed scripts, and ratings for those available are collated based on submissions from Virtualmin Pro users and displayed in the list of scripts available.
-Validation of MySQL and PostgreSQL features now checks that the database user exists too.
+Validation of MySQL and PostgreSQL features now check that the database user exists too.
+Added plaintext password to list-users.pl output.
+Added the resend-email.pl command-line script for re-sending a domain's signup email.
